# bootstrappedLM

./: Outline.md  pyproject.toml  train.py
data/eval_tasks/: arithmetic_expr_heldout.json  grid_planning_heldout.json
src/agent/: __init__.py  action_selection.py  context_builder.py  model.py  planner.py
src/common/: config.py  metrics.py  types.py
src/concepts/: compiler.py  library.py
src/curriculum/: adaptive.py  engine.py  history.py
src/envs/: __init__.py  arithmetic_expr.py  base.py  grid_planning.py  gridworld.py
src/replay/: buffer.py  prioritized.py
src/training/: eval.py  loop.py  losses.py  scheduler.py
src/verifier/: __init__.py  anti_hacking.py  base.py  checkers.py
